force-app/main/default/objects/Expense_Item__c/Expense_Item__c.object-meta.xml
<CustomObject>
    <description>Expense Line Item custom object storing line item details for expense reports</description>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>EXPI-{000000}</displayFormat>
        <label>Expense Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>