force-app/main/default/objects/Expense_Item__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Expense Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>