force-app/main/default/objects/Expense_Item__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Personal</fullName>
                <default>true</default>
                <label>Employee Personal</label>
            </value>
            <value>
                <fullName>Corporate Card</fullName>
            </value>
            <value>
                <fullName>Company Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>