force-app/main/default/objects/Expense_Item__c/fields/Policy_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Policy_Explanation__c</fullName>
    <label>Policy Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>