force-app/main/default/objects/Expense_Item__c/fields/Policy_Result__c.field-meta.xml
<CustomField>
    <fullName>Policy_Result__c</fullName>
    <label>Policy Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
                <default>true</default>
                <label>PASS</label>
            </value>
            <value>
                <fullName>POLICY_EXCEPTION</fullName>
            </value>
            <value>
                <fullName>MISSING_RECEIPT</fullName>
            </value>
            <value>
                <fullName>POTENTIAL_DUPLICATE</fullName>
            </value>
            <value>
                <fullName>AMOUNT_MISMATCH</fullName>
            </value>
            <value>
                <fullName>BUDGET_OVERRUN</fullName>
            </value>
            <value>
                <fullName>VERIFICATION_REQUIRED</fullName>
            </value>
            <value>
                <fullName>HUMAN_REVIEW_REQUIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>