force-app/main/default/objects/Expense_Item__c/fields/Policy_Result_Details__c.field-meta.xml
<CustomField>
    <fullName>Policy_Result_Details__c</fullName>
    <label>Policy Result Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>