force-app/main/default/objects/Expense_Item__c/fields/Reimbursable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursable_Amount__c</fullName>
    <label>Reimbursable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>