force-app/main/default/objects/Expense_Item__c/validationRules/Amount_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Amount__c)) &amp;&amp; Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Expense Amount must be greater than zero.</errorMessage>
</ValidationRule>